src/scripts/h5p-info-wall-panel.scss
@import '../styles/h5p-info-wall-main';

.h5p-info-wall-panel {
  display: flex;
  flex-direction: row;
  opacity: 1;
  padding: 1em;
  width: calc(100% - 2em);

  &.h5p-info-wall-background {
    background-color: rgba(0, 0, 0, .025);
  }

  .h5p-info-wall-panel-entries-wrapper {
    flex: 1 1 auto;
    width: 100%;

    .h5p-info-wall-panel-entries {
      border-spacing: 0 .5em;
      margin: -0.5em 0;

      .h5p-info-wall-panel-entry {
        &:not(:last-child) {
          margin-bottom: 0.5em;
        }

        &.bold {
          font-weight: bold;
        }

        &.italic {
          font-style: italic;
        }

        .h5p-info-wall-panel-entry-label {
          max-width: 15em;
          overflow: hidden;
          padding-right: 0.25em;
          text-overflow: ellipsis;
          vertical-align: top;
          white-space: nowrap;

          &::after {
            content: ':'
          }
        }

        .h5p-info-wall-panel-entry-text {
          vertical-align: top;
          width: 100%;

          p:first-child {
            margin-top: 0;
          }

          p {
            margin-bottom: 0;
            margin-top: .5em;
          }
        }
      }
    }
  }

  .h5p-info-wall-panel-image-wrapper-outer {
    align-items: center;
    display: flex;
    flex: 0 0 auto;
    justify-content: center;

    .h5p-info-wall-panel-image-background {
      filter: blur(5px);
      max-height: 100%;
      max-width: 100%;
      position: absolute;
    }

    .h5p-info-wall-panel-image-wrapper-inner {
      height: 100%;
      width: 100%;
      position: relative;

      .h5p-info-wall-panel-image {
        max-height: 100%;
        max-width: 100%;
        position: absolute;
      }
    }
  }

  &.h5p-info-wall-display-none {
    display: none;
  }
}

.h5p-info-wall-panel-a11y-list-item {
  &.h5p-info-wall-display-none {
    display: none;
  }
}

@media (max-width: $mobile-breakpoint) {
  .h5p-info-wall-panel {
    align-items: center;
    flex-direction: column-reverse;
    font-size: 1.25em;

    .h5p-info-wall-panel-image-wrapper-outer {
      margin-bottom: .5em;
    }
  }
}

